@@ -4,6 +4,9 @@
  - Fix bugtracker.
  - Update copyright years.
 
+ [PYX::Parser]
+ - Add 'output_encoding' parameter and implement to output.
+
 0.07 2020-04-26T15:53:28+02:00
  [Common]
  - Rewrite doc SUBROUTINES/METHODS to POD =head2.
